--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pydantic = ">=2.0.0"
 python-dotenv = ">=1.0.0"
 openai = ">=1.0.0"
 ollama = "^0.5.3"
+fastmcp = "^2.14.3"
+requests = "^2.32.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
